calico_versioned_docs/version-3.32/reference/calicoctl/datastore/overview.mdx
---
description: Reference overview of the calicoctl datastore subcommands in Calico Open Source for migrating between etcdv3 and Kubernetes datastores.
---

# calicoctl datastore

This section describes the `calicoctl datastore` commands.

Read the [calicoctl Overview](../overview.mdx)
for a full list of calicoctl commands.

## Display the help text for 'calicoctl datastore' commands

Run `calicoctl datastore --help` to display the following help menu for the
commands.

```
Usage:
  calicoctl datastore <command> [<args>...]

    migrate               Migrate the contents of an etcdv3 datastore to a Kubernetes datastore.
    migrate-policy-names  Rewrite pre-v3.32 policy names in an etcdv3 datastore to drop the legacy "default." tier prefix.

Options:
  -h --help      Show this screen.

Description:
  Datastore specific commands for calicoctl.

  See 'calicoctl datastore <command> --help' to read about a specific subcommand.
```

## Datastore specific commands

Details on the `calicoctl datastore` commands are described in the documents linked below
organized by sub command.

- [calicoctl datastore migrate](migrate/overview.mdx)
- [calicoctl datastore migrate-policy-names](migrate-policy-names.mdx)
